--- a/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
+++ b/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
@@ -31,7 +31,9 @@
                            for="field_code_project_admin" jhiTranslate="imputationSqliApp.imputation.project_code">Project</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project"
                             [(ngModel)]="appRequestBody.agresso">
-                        <option *ngFor="let team of allTeams" [value]="team.agresso">{{team.name}}</option>
+                        <optgroup *ngFor="let team of allTeams" label="{{team.name}}">
+                            <option *ngFor="let identifier of team.appTbpIdentifiers" [value]="identifier.agresso">{{identifier.mission}}</option>
+                        </optgroup>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form" *ngSwitchCase="false">
