--- a/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
+++ b/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
@@ -5,12 +5,16 @@
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
             <jhi-alert-error></jhi-alert-error>
-            <form class="form-inline" name="tbpImputationForm" role="form" novalidate [ngSwitch]="isAdmin()" (ngSubmit)="getTimesheet()">
+            <form class="form-inline" name="tbpImputationForm" role="form" novalidate [ngSwitch]="isAdmin()"
+                  (ngSubmit)="getTimesheet()">
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.project_code"
                            for="field_code_project_admin">Projet</label>
-                    <select class="form-control" id="field_code_project_admin" name="code_project" [(ngModel)]="tbpRequestBody.idTbp">
-                        <option *ngFor="let team of allTeams" [ngValue]="team.idTbp">{{team.name}}</option>
+                    <select class="form-control" id="field_code_project_admin" name="code_project"
+                            [(ngModel)]="tbpRequestBody.idTbp">
+                        <optgroup *ngFor="let team of allTeams" label="{{team.name}}">
+                            <option *ngFor="let identifier of team.appTbpIdentifiers" [ngValue]="identifier.idTbp">{{identifier.mission}}</option>
+                        </optgroup>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form" *ngSwitchCase="false">
@@ -29,7 +33,8 @@
                            [(ngModel)]="tbpRequestBody.endDate"/>
                 </div>
                 <div class="form-group tbp-import-form">
-                    <button type="button" (click)="getTimesheet()" id="tbp-timesheet-import-button" class="btn btn-primary float-right">
+                    <button type="button" (click)="getTimesheet()" id="tbp-timesheet-import-button"
+                            class="btn btn-primary float-right">
                         <!--<fa-icon [icon]="'calendar'"></fa-icon>-->
                         <span jhiTranslate="global.menu.entities.importTBP">
                             Get TBP timesheet
@@ -45,7 +50,8 @@
         <div *ngSwitchCase="true">
             <div class="table-responsive" *ngFor="let imputation of imputations">
                 <h3>
-                    <span jhiTranslate="imputationSqliApp.imputation.monthNumber" [translateValues]="{month: imputation.month}">Month : </span>
+                    <span jhiTranslate="imputationSqliApp.imputation.monthNumber"
+                          [translateValues]="{month: imputation.month}">Month : </span>
                 </h3>
                 <table class="table table-bordered table-hover table-sm">
                     <thead>
@@ -56,16 +62,20 @@
                         </th>
                         <th jhiTranslate="imputationSqliApp.imputation.total"><span>Total</span>
                         </th>
-                        <th *ngFor="let day of imputationDays.get(imputation)" [id]="day">{{day + '/' + imputation.month}}</th>
+                        <th *ngFor="let day of imputationDays.get(imputation)"
+                            [id]="day">{{day + '/' + imputation.month}}</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr *ngFor="let monthlyImputation of imputation.monthlyImputations">
                         <td>{{monthlyImputation.collaborator.id}}</td>
-                        <td><a [routerLink]="['/collaborator', monthlyImputation.collaborator.id, 'view' ]">{{monthlyImputation.collaborator.lastname + ' ' + monthlyImputation.collaborator.firstname}}</a></td>
+                        <td><a
+                            [routerLink]="['/collaborator', monthlyImputation.collaborator.id, 'view' ]">{{monthlyImputation.collaborator.lastname + ' ' + monthlyImputation.collaborator.firstname}}</a>
+                        </td>
                         <td class="text-center"><b>{{monthlyImputation.total}}</b></td>
                         <td class="text-center" *ngFor="let day of imputationDays.get(imputation)" [id]="day">
-                            <span *ngFor="let dailyImputation of monthlyImputation.dailyImputations">{{day == dailyImputation.day ? dailyImputation.charge : ''}}</span>
+                            <span
+                                *ngFor="let dailyImputation of monthlyImputation.dailyImputations">{{day == dailyImputation.day ? dailyImputation.charge : ''}}</span>
                         </td>
                     </tr>
                     </tbody>
