--- a/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
@@ -12,8 +12,10 @@
                     <label class="form-control-label"
                            for="field_code_project_admin" jhiTranslate="imputationSqliApp.imputation.project_code">Project</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project"
-                            [(ngModel)]="appTbpRequestBody.team">
-                        <option *ngFor="let team of allTeams" [ngValue]="team">{{team.name}}</option>
+                            [(ngModel)]="appTbpRequestBody.appTbpIdentifier">
+                        <optgroup *ngFor="let team of allTeams" label="{{team.name}}">
+                            <option *ngFor="let identifier of team.appTbpIdentifiers" [ngValue]="identifier">{{identifier.mission}}</option>
+                        </optgroup>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form" *ngSwitchCase="false">
